--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guia Flexbox</title>
-    <link rel="stylesheet" href="css/ex1.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/icons8-css-96.png">
 </head>
 <body>
